fixed minor layout issue

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -91,4 +91,6 @@ $first-column: $img-width + $img-padding-left;
     max-height: $project-block-height - $project-title-height;
 
     text-align: left;
+
+    color: $color-main;
 }
